--- a/curso.docs/css/estilo.css
+++ b/curso.docs/css/estilo.css
@@ -1,40 +1,77 @@
-h1 {background-position: center;
+header {background-position: center;
   font-size: 30px;
-color: blue}
-body {background-color: grey;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-background-size: auto;
-background-position: center;
-background-size:cover;
-  background-image: url("https://e7.pngegg.com/pngimages/176/428/png-clipart-chimichanga-deadpool-fan-art-chimichanga-chibi-fictional-character.png") ;
+color: blue;
+text-decoration: underline red;
 text-align: center;
 }
-.subtitulo{font-style: italic;
+body {background-color:#EAECEE;
+
+}
+nav{
+
+  background-size:cover;background-image: url("https://e7.pngegg.com/pngimages/176/428/png-clipart-chimichanga-deadpool-fan-art-chimichanga-chibi-fictional-character.png") ;
+  text-align:center;
+  font-size: 35px;
+  font-style: oblique;
+  color: blue;
+  background-size: auto;
+  background-repeat: no-repeat;
+background-position: center;
+height: 500px;
+width:inherit;
+}
+
+.subtitulo {font-style: italic;
 font-stretch: condensed;
 color: blue;
 font-size: 27px;
 background-color: #AED6F1;
-
+text-decoration: underline red;
 }
+
 .parrafo{font-style: normal;
   font-size: 23px;
   color: #2ECC71;
 }
 section{border: 10px solid color: black;
   margin 25px;
-  width: 40%;
+  width: 45%;
   float: left;
   margin: 1%;
   padding: 20px;
   background-color: white;
   background-image:url(./imagenes_lucia/chimichanga.jpg);
+height: 700px;
+overflow: auto;
+
+}
+
+
+aside{order: 10px solid color: black;
+  margin 25px;
+  width: 45%;
+  float: left;
+  margin: 1%;
+  padding: 20px;
+  background-color: white;
+height: 700px;
+overflow: auto;
 
 
 }
-.footer{background-color: white;
-  padding: 1em 0;
+.footer{  clear: both;
+  background-color: black;
+  text-align: right;
+  text-decoration-color: blue;
+  font-size: 24px;
   text-align: center;
-  position: absolute;
-  bottom: 0;
+
+}
+.container{
+  color: green;
+  font-size: 40px;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+
 }
